--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
           </div> -->
 
         <!-- KYC Form Section -->
-        <div id="about" class="TeamDetailsSect mt-100">
+        <div id="about" class="TeamDetailsSect">
             <div class="TeamDetailsContainer">
                 <div class="row">
                     <div class="col-md-7">
@@ -367,8 +367,8 @@
                     </div>
                     <div class="footer-listing text-center mb-50 md-mb-70 xs-mb-50">
                         <ul class="footer-icon-list">
-                            <li><a href="tglink" target="_blank"><i class="icon-telegram"></i></a></li>
-                            <li><a href="twitterlink" target="_blank"><i class="icon-twitter"></i></a></li>
+                            <li><a href="https://t.me/EBGamesSol" target="_blank"><i class="icon-telegram"></i></a></li>
+                            <li><a href="https://twitter.com/EBGameSol" target="_blank"><i class="icon-twitter"></i></a></li>
                         </ul>
                         
                     </div>
