--- a/index.html
+++ b/index.html
@@ -166,8 +166,8 @@
 
 
         <!-- Banner Section Start -->
-        <div id="sc-banner" class="sc-banner banner-bg" style="min-height: 100vh; max-height: 100%;">
-
+        <div id="sc-banner" class="sc-banner banner-bg" style="background-image:linear-gradient(#000000c5,#000000c9),url(/assets/images/bg.jpg);min-height: 100vh; max-height: 100%;">
+         
             <div style="left: 0px; top: 0px; position: absolute; width: 100%; height: 100%; overflow: hidden;" class="video-docker">
                 <!-- <video style="min-width: 100%; min-height: 100%; position: absolute; object-fit: cover;" class="" src="assets/images/mars2.mp4" type="video/mp4" autoplay muted loop></video> -->
             </div>
@@ -217,7 +217,7 @@
           </div> -->
 
         <!-- KYC Form Section -->
-        <div id="about" class="TeamDetailsSect">
+        <div id="about" class="TeamDetailsSect mt-100">
             <div class="TeamDetailsContainer">
                 <div class="row">
                     <div class="col-md-7">
